[package]
name = "heapless_matrix"
authors = ["Spago Harun hspago1@etf.unsa.ba"]
version = "0.1.5"
edition = "2021"
license = "BSL-1.0"
description = "This crate provides a simple and efficient implementation of a matrix data structure in Rust. It offers functionality for creating, manipulating, and performing operations on matrices, such as transposition, summation, and multiplication."
repository = "https://github.com/Spago123/heapless-matrix"
readme = "README.md"
keywords = ["matrix", "linear-algebra", "heapless", "rust", "embedded"]
documentation = "https://docs.rs/heapless_matrix/0.1.5/heapless_matrix/"


[dependencies]
heapless = { git = "https://github.com/dsenyushkindev/heapless", rev = "42d6a0367e90705ae781644f76f03648522d0cd7" }
